--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,7 +24,7 @@ const iconSrc = `${base}favicon.svg`;
       <HeaderLink href={link('')} exact>Home</HeaderLink>
       <HeaderLink href={link('blog/')}>Blog</HeaderLink>
       <HeaderLink href={link('templates/')}>Templates</HeaderLink>
-      <HeaderLink href={link('downloads/')}>Downloads</HeaderLink>
+      <HeaderLink href={link('stats/')}>Stats</HeaderLink>
       <HeaderLink href={link('books/')}>Books</HeaderLink>
       <HeaderLink href={link('albums/')}>Albums</HeaderLink>
       <HeaderLink href={link('art/')}>Art</HeaderLink>
@@ -78,12 +78,12 @@ const iconSrc = `${base}favicon.svg`;
           <HeaderLink href={link('')}>Home</HeaderLink>
           <HeaderLink href={link('blog/')}>Blog</HeaderLink>
           <HeaderLink href={link('templates/')}>Templates</HeaderLink>
+          <HeaderLink href={link('stats/')}>Stats</HeaderLink>
           <HeaderLink href={link('books/')}>Books</HeaderLink>
           <HeaderLink href={link('albums/')}>Albums</HeaderLink>
           <HeaderLink href={link('art/')}>Art</HeaderLink>
           <HeaderLink href={link('guitar/')}>Guitar</HeaderLink>
           <HeaderLink href={link('inspirations/')}>Inspirations</HeaderLink>
-          <HeaderLink href={link('downloads/')}>Downloads</HeaderLink>
           <HeaderLink href={link('about/')}>About</HeaderLink>
         </div>
 
